# GaiaTCP

./: CMakeLists.txt  README.md
GaiaTCP/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Connection.cpp  Connection.hpp  Connector.cpp  Connector.h  Endpoint.cpp  Endpoint.hpp  GaiaTCP.hpp
ReceiverTest/: CMakeLists.txt  ReceiverTest.cpp
SenderTest/: CMakeLists.txt  SenderTest.cpp
